# deep-rich-skill

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/reports/: simplywallst-company-report-anatomy.html
skills/deep-rich/: SKILL.md
skills/deep-rich/agents/: stock-research.toml
skills/deep-rich/references/: AGENTIC-NEWS.md  APP-LAYOUT.md  DATA-SOURCES.md  DESIGN.md  GUARDS.md  RULES.md  research-checklist.md
skills/deep-rich/references/commands/: analyze.md  briefing.md  dashboard.md  deploy.md  deployment.md  doctor.md  export.md  fundamentals.md  goals.md  health.md  journal.md  news.md  onboard.md  performance.md  portfolio.md  prices.md  rebalance.md  research.md  review.md  risk.md  summary.md  update.md
skills/deep-rich/references/templates/: company-profile.html
skills/deep-rich/scripts/: _common.py  export_company_profile.py  probe.py  signals.py  update_skills.py
tests/: test_export_company_profile.py  test_skill_package.py
