[project]
name = "deep-rich-skill"
version = "0.1.0"
description = "Pi skill package for the Deep Rich portfolio manager."
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
  "pytest>=8.4",
  "ruff>=0.13",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["skills/deep-rich/scripts"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
